--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 							<h4 class="where">¿Dónde?</h4>
 							<h5 class="where">La ceremonia</h5>
-							<p class="link"><a href="https://maps.app.goo.gl/JuqPEHdqEjuwFj9i6">Ermita de Nuestra Señora de los Ángeles&nbsp;12170 Sant Mateu, Castellón</a></p>
+							<p class="link"><a href="https://maps.app.goo.gl/JuqPEHdqEjuwFj9i6">Ermita de la Mare de Déu dels Ángels&nbsp;12170 Sant Mateu, Castellón</a></p>
 							
 							<h5 class="where">La gran fiesta</h5>
 							<p class="link"><a href="https://maps.app.goo.gl/YUpsqtasZc66xytn6">Hotel Restaurante Montesa Av. de la Constitució, 21, 12170 Sant Mateu, Castelló</a></p>
