--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<div class="container">
 
 				<div class="section-head">
-					<h3>¡Ayudanos a construir nuestra casa de amor!</h3>
+					<h3>¡Un nido de amor queremos crear, y con tu apoyo lo vamos a lograr!</h3>
 				</div>
 
 				<div class="row">
