--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="caption">
 							<h1>Lucia y Darío</h1>
 							<div class="type">
-								<h3>B</h3><span class="typed-cursor">|</span>
+								<h3 class="welcome-h3">B</h3><span class="typed-cursor">|</span>
 							</div>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 						<div class="hero-content the-wedding">
 							<h3 class="head-left">LA BODA</h3>
 							<h4>¿Cuándo?</h4>
-							<p>27 de Septiembre del 2025</p>
+							<p>27 de septiembre del 2025</p>
 
 							<h4 class="where">¿Dónde?</h4>
 							<h5 class="where">La ceremonia</h5>
@@ -220,14 +220,15 @@
 			<div class="container">
 
 				<div class="section-head">
-					<h5>¡Un nido de amor queremos crear, y con tu apoyo lo vamos a lograr!</h5>
+					<h5>Lo más importante para nosotros es compartir este día contigo. Si además quieres contribuir a nuestro nuevo comienzo, te lo agradecemos de corazón</h5>
 				</div>
 
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-12">
 						<div class="item text-center">
 							<span class="icon ion-home"></span>
-							<p>ESXX 2030 3030 3030 3030</p>
+							<br>
+							<img class="account-img" src="./img/image12.png">
 						</div>
 					</div>
 					<div class="clear-fix"></div>
@@ -244,7 +245,7 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="content text-center">
-							<h3>Si tienes dudas contactanos!</h3>
+							<h3>¡Si tienes dudas contáctanos!</h3>
 							<br>
 							<h4><a href="tel:+34627101457">627 10 14 57</a></h4>
 							
